added version to api and unified places endpoints
